# tinyscibio

./: .coverage  .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  tox.ini  tox.toml  zensical.toml
.github/workflows/: docs.yml  release.yml  tox.yml
API/api_server/: index.html
API/bam/: index.html
API/intervals/: index.html
API/io/: index.html
docs/: index.md
docs/API/: api_server.md  bam.md  intervals.md  io.md
docs/stylesheets/: extra.css
search/: search_index.json
src/libpybio/: __init__.py  _biotypes.py  _io.py  http_client.py  io.py
src/libpybio/tests/: test_io.py
src/libscibio/: __init__.py  _io.py  api_server.py  bam.py
src/tinyscibio/: __init__.py  _intervals.py  _io.py  api_server.py  bam.py
stylesheets/: extra.css
tests/: conftest.py  test_bam.py  test_bamarray.py  test_intervals.py  test_io.py  test_parse_region.py  test_request_api.py  test_walk_bam.py
