[project]
name = "libscibio"
version = "0.1.1"
description = "Add your description here"
authors = [
    { name = "Simo", email = "svm.zhang@gmail.com" }
]
dependencies = [
    "requests>=2.32.3",
    "pysam>=0.22.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/libscibio"]

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "mypy>=1.11.2",
    "types-requests>=2.32.0.20240914",
    "tox>=4.23.0",
    "tox-gh-actions>=3.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --tb=auto --cov-branch --cov-fail-under=95 --cov=libscibio --cov-report=term-missing"

[tool.mypy]
strict = true
pretty = true

[dependency-groups]
test = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
]
type = [
    "mypy>=1.11.2",
    "types-requests>=2.32.0.20240914",
]
