[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling", "hatch-vcs"
]

[project]
name = "tinyscibio"
description = "tinyscibio provides convenient shortcut functions to boost daily bioinformatics work."
readme = {file = "README.md", content-type = "text/markdown"}
keywords = [
  "bioinformatics",
  "genomics",
  "sequencing"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Software Development :: Libraries"
]
urls.Source = "https://github.com/svm-zhang/tinyscibio"
urls.Documentation = "https://svm-zhang.github.io/tinyscibio/"
urls.Issues = "https://github.com/svm-zhang/tinyscibio/issues"
license = "MIT"
authors = [
    { name = "Simo Zhang", email = "svm.zhang@gmail.com" }
]
maintainers = [
    { name = "Simo Zhang", email = "svm.zhang@gmail.com" }
]
dynamic = ["version"]
dependencies = [
    "requests>=2.32.3",
    "pysam>=0.22.1",
]
requires-python = ">= 3.8"

[tool.hatch]
metadata.allow-direct-references = true
build.targets.sdist.include = [
  "/src",
  "/tests",
  "/tox.ini"
]
build.hooks.vcs.version-file = "src/tinyscibio/_version.py"
build.targets.wheel.packages = ["src/tinyscibio"]
version.source = "vcs"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "mypy>=1.11.2",
    "types-requests>=2.32.0.20240914",
    "tox>=4.23.0",
    "tox-gh-actions>=3.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --tb=auto --cov-branch --cov-fail-under=95 --cov=tinyscibio --cov-report=term-missing"

[tool.mypy]
strict = true
pretty = true

[dependency-groups]
test = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
]
type = [
    "mypy>=1.11.2",
    "types-requests>=2.32.0.20240914",
]
