[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling==1.26.3", "hatch-vcs"
]

[project]
name = "tinyscibio"
description = "tinyscibio provides convenient shortcut functions to boost daily bioinformatics work."
readme = {file = "README.md", content-type = "text/markdown"}
keywords = [
  "bioinformatics",
  "genomics",
  "sequencing"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Software Development :: Libraries"
]
urls.Source = "https://github.com/svm-zhang/tinyscibio"
urls.Documentation = "https://svm-zhang.github.io/tinyscibio/"
urls.Issues = "https://github.com/svm-zhang/tinyscibio/issues"
license = "MIT"
authors = [
    { name = "Simo Zhang", email = "svm.zhang@gmail.com" }
]
maintainers = [
    { name = "Simo Zhang", email = "svm.zhang@gmail.com" }
]
dynamic = ["version"]
dependencies = [
    "requests>=2.32.3",
    "pysam>=0.23.0",
    "polars>=1.12.0",
    "numpy>=2.1.2",
    "ncls>=0.0.68",
    "setuptools>=75.3.0",
]
requires-python = ">= 3.10"

[tool.hatch]
metadata.allow-direct-references = true
build.targets.sdist.include = [
  "/src",
  "/tests",
  "/tox.ini"
]
build.targets.wheel.packages = ["src/tinyscibio"]
build.hooks.vcs.version-file = "src/tinyscibio/_version.py"
version.source = "vcs"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "mypy>=1.11.2",
    "types-requests>=2.32.0.20240914",
    "tox>=4.23.0",
    "tox-gh-actions>=3.2.0",
    "numpy-typing>=1.1.1",
]

[tool.coverage]
paths.source = [
  "src",
  ".tox*/lib/python*/site-packages",
]
run.branch = true
run.omit = [
  "*/_version.py",
]
run.source = [
  "tinyscibio"
]
run.parallel = true
report.fail_under = 95
report.show_missing = true


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --tb=auto --cov"

[tool.mypy]
strict = true
pretty = true
overrides = [
  { module = [
      "ncls"
    ], ignore_missing_imports = true},
]

[dependency-groups]
test = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
]
type = [
    "mypy>=1.11.2",
    "types-requests>=2.32.0.20240914",
]
